--- a/core/static/css/sidebar.css
+++ b/core/static/css/sidebar.css
@@ -1,81 +1,7 @@
-#sidebar {
-    width: 160px;
-    background-color: #000;
-    margin-left: -20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 5px;
-    padding-right: 5px;
-
-    /* These are required to make it stretch vertically (NOTE: alongwith parent container having relative positioning) */
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-
-    font-family: Futura, sans-serif;
+#emptyspace{
+	height: 235vh;
 }
 
-#sidebar #userinfo {
-    padding-bottom: 15px;
-}
-
-#sidebar #userinfo .userinfo_element {
-    margin-bottom: 5px;
-}
-
-#sidebar #userinfo .userinfo_element label {
-    font-family: Futura, sans-serif;
-    color: rgb(125, 125, 125);
-}
-
-#sidebar #userinfo .userinfo_element div {
-    font-family: Menlo;
-    margin-left: 15px;
-    color: #aaaaaa;
-}
-
-#sidebar a:hover {
-     color: #aaa !important;
-}
-
-#sidebar .listing {
-    /* margin of last listing overlaps with the bottom margin of the 'listings' container */
-    margin-bottom: 10px;
-}
-
-#sidebar .listing_title {
-    font-family: Futura, sans-serif;
-    border-bottom: 2px solid #000000;
-    border-top: 2px solid #000000;
-    background-color: #ffffff;
-    margin-left: 0px;
-    margin-right: -5px;
-    padding: 5px;
-    padding-left: 14px;
-}
-
-#sidebar .listing_element {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    color: #ffffff;
-    margin-left: 15px;
-}
-
-.ticker{
-    padding:5px;
-    margin-right:-5px;
-    margin-top:15px;
-    padding-left:14px;
-    background-color:#fff;
-    color:#000 !important;
-    margin-left:0px !important;
-}
-
-.tickerval{
-    text-align:center;
-    width:150px;
-    font-size:60px;
-    margin-top:5px;
-    color:#ff0000 !important;
-    margin-left:0px !important;
+#sidebar{
+	margin-bottom: 0px;
 }
