--- a/core/templates/authenticated/assignment_id/student_graded.html
+++ b/core/templates/authenticated/assignment_id/student_graded.html
@@ -8,9 +8,9 @@
 
 {% block authenticated_body %}
     <div>
-        <h3 class="header3">Maths Assignment : Probability</h3><br>
-        <h4 class="header4">Assigned : 12/12/2014</h4><br>
-        <h4 class="header4">Submission Date : 18/12/2014</h4><br>
+        <h3 class="header header3">Maths Assignment : Probability</h3><br>
+        <h4 class="header header4">Assigned : 12/12/2014</h4><br>
+        <h4 class="header header4">Submission Date : 18/12/2014</h4><br>
 
         <div class="scroll">
             <table class="optionsbox" cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
