--- a/core/templates/authenticated/assignments/student.html
+++ b/core/templates/authenticated/assignments/student.html
@@ -6,7 +6,7 @@
 
 {% block authenticated_body %}
     <div>
-        <h3 class="header3">List of Incomplete Assignments</h3>
+        <h3 class="header header3">List of Incomplete Assignments</h3>
         <br>
 
         <div class="scroll bigscroll">
