--- a/core/templates/authenticated/settings/base.html
+++ b/core/templates/authenticated/settings/base.html
@@ -8,7 +8,7 @@
 
 {% block authenticated_body %}
     <div>
-        <h3 class="header3">Account Settings</h3><br>
+        <h3 class="header header3">Account Settings</h3><br>
     </div>
     <div>    
         {% include "authenticated/settings/common_account.html" %}
