--- a/core/templates/authenticated/settings/student.html
+++ b/core/templates/authenticated/settings/student.html
@@ -3,9 +3,9 @@
     {% include "authenticated/sidebar/student.html" %}
 {% endblock %}
 {% block customdata %}
-    <h4 class="header4">Class : {{ vm.authenticated_body.classroom }}</h4><br>
-    <h4 class="header4">Class Teacher : {{ vm.authenticated_body.class_teacher }}</h4><br>
-    <h4 class="header4">Parents :
+    <h4 class="header header4">Class : {{ vm.authenticated_body.classroom }}</h4><br>
+    <h4 class="header header4">Class Teacher : {{ vm.authenticated_body.class_teacher }}</h4><br>
+    <h4 class="header header4">Parents :
         {% if vm.authenticated_body.parents %}
             {{ vm.authenticated_body.parents|join:", " }}
         {% else %}
