--- a/core/templates/authenticated/subject_id/student.html
+++ b/core/templates/authenticated/subject_id/student.html
@@ -12,11 +12,11 @@
 
 {% block authenticated_body %}
 
-    <h3 class="header3">{{ vm.authenticated_body.subject }} Overview</h3><br>
+    <h3 class="header header3">{{ vm.authenticated_body.subject }} Overview</h3><br>
 
     <div class="leftstud">
         <div>
-            <h3 class="header3">Subject Announcements</h3><br>
+            <h3 class="header header3">Subject Announcements</h3><br>
 
             <div class="scroll">
                 <table class="announcebox" cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
@@ -44,7 +44,7 @@
 
 
         <div class="incompletebox">
-            <h3 class="header3">Incomplete Assignments</h3>
+            <h3 class="header header3">Incomplete Assignments</h3>
             <br>
 
             <div class="scroll">
@@ -81,7 +81,7 @@
         <br>
 
         <div class="gradedbox">
-            <h3 class="header3">Graded Assignments</h3>
+            <h3 class="header header3">Graded Assignments</h3>
             <br>
 
             <div class="scroll">
