--- a/core/templates/authenticated/settings/teacher.html
+++ b/core/templates/authenticated/settings/teacher.html
@@ -3,7 +3,7 @@
     {% include "authenticated/sidebar/teacher.html" %}
 {% endblock %}
 {% block customdata %}
-	<h4 class="header4"> SubjectRooms:
+	<h4 class="header header4"> SubjectRooms:
         {% for subject in vm.authenticated_body.subject_listings %}
             <div>{{ subject.id }}. {{ subject.label }} </div>
 	    {% endfor %}
