--- a/core/templates/authenticated/sidebar/ticker.html
+++ b/core/templates/authenticated/sidebar/ticker.html
@@ -1,4 +1,4 @@
 <div class="ticker_box">
-    <div class="ticker"><!---{{ ticker.label }} --> Assignments To Do</div>
-    <div class="tickerval"><a href="{% url ticker.urlname %}">{{ ticker.value }}</a></div>
+    <h6 class='sidebarheader header6'><!---{{ ticker.label }} --> Assignments To Do</h6>
+   	<p id='ticker' href="{% url ticker.urlname %}">{{ ticker.value }}</p>
 </div>
