--- a/core/templates/authenticated/sidebar/userinfo.html
+++ b/core/templates/authenticated/sidebar/userinfo.html
@@ -1,6 +1,6 @@
-<div class="userinfo_element">
-    <div>{{ vm.sidebar.name }}</div>
-</div>
-<div class="userinfo_element">
-    <div>{{ vm.sidebar.user_school }}</div>
-</div>
+<li id="userinfo">
+	<h6 class='sidebarheader header6'> Personal Info </h6>
+  	    <li>{{ vm.sidebar.name }}</li>
+   		<li>{{ vm.sidebar.user_school }}</li>
+</li>
+
