--- a/core/templates/authenticated/charts/performance_report.html
+++ b/core/templates/authenticated/charts/performance_report.html
@@ -1,4 +1,4 @@
-<div>
+<div id="performance_report">
     <h6 class="header header6 perf"> My Performance Report</h6>
     <div id="bargraph" class='scroll'></div>
 </div>
