--- a/core/templates/authenticated/charts/performance_breakdown.html
+++ b/core/templates/authenticated/charts/performance_breakdown.html
@@ -1,14 +1,10 @@
 <h4 class="header perf header4">{{user.first_name}}'s Performance</h4>
 <br>
-<div>   
-    <ul id='subjectbar'class="nav nav-tabs">
-    </ul>
-</div>
-<div>
-    <div id='linegraph0' class='chart scroll'></div>
-    <div id='linegraph2' class='chart scroll'></div>
-    <div id='linegraph3' class='chart scroll'></div>
-    <div id='linegraph4' class='chart scroll'></div>
-    <div id='linegraph5' class='chart scroll'></div>
-    <div id='linegraph6'  class='chart scroll'></div>
+<div id='performance_breakdown'>
+    <div>
+        <ul id='subjectbar' class="nav nav-tabs">
+        </ul>
+    </div>
+    <div id="linegraph">
+    </div>
 </div>
