--- a/core/templates/authenticated/sidebar/listings.html
+++ b/core/templates/authenticated/sidebar/listings.html
@@ -1,5 +1,5 @@
-<div id="listings">          
-	{% for listing in sidebar_info.listings %}
+<div id="listings">
+    {% for listing in listings %}
 	    <div class="listing">
 	        <div class="listing_title">{{ listing.title }}</div>
 	        {% for element in listing.elements %}
