--- a/core/templates/authenticated/sidebar/parent_child_header.html
+++ b/core/templates/authenticated/sidebar/parent_child_header.html
@@ -1,4 +1,4 @@
 <div class="childinfo">
-    <div>{{ child_info.child.first_name }} {{ child_info.child.last_name }}</div>
-    <div> {{ child_info.standard }} {{ child_info.division }} </div>
+    <div>{{ child.name }}</div>
+    <div> {{ child.classroom }} </div>
 </div>
