--- a/core/templates/authenticated/sidebar/userinfo.html
+++ b/core/templates/authenticated/sidebar/userinfo.html
@@ -1,8 +1,6 @@
-<div id="userinfo">
-        <div class="userinfo_element">
-            <div>{{ user.first_name }} {{ user.last_name }}</div>
-        </div>
-        <div class="userinfo_element">
-            <div>{{ vm.sidebar.user_school }}</div>
-        </div>
+<div class="userinfo_element">
+    <div>{{ vm.sidebar.name }}</div>
+</div>
+<div class="userinfo_element">
+    <div>{{ vm.sidebar.user_school }}</div>
 </div>
