Modularity and graph changes

--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -32,7 +32,9 @@
 
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="{% static "js/charts/mockdata.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/subjectbar.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/student_subjectbar.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/subjectroom_performance_breakdown.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/assignment_performance.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script>  
     <script type="text/javascript" src="{% static "js/charts/graphs.js" %}"></script>       
